--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven {
+            url 'https://jitpack.io'
+        }
+
     }
 }
 
