--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".transactions.TransactionActivity"></activity>
-        <activity
-            android:name=".Profile"
-            android:label="@string/title_activity_profile" />
-        <activity android:name=".dashboard.DashBoardActivity">
+        <activity android:name=".DashBoardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
