--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-rc02'
     implementation 'com.github.arifuljannatarif:CircleImageView:circleImageViewlibrary-SNAPSHOT'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha03'
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
