--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hautomation">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeDark">
-        <activity android:name=".activity.transactions.TransactionActivity"></activity>
-        <activity
-            android:name=".activity.profile.Profile"
-            android:label="@string/title_activity_profile" />
-        <activity android:name=".activity.dashboard.DashBoardActivity">
+        <activity android:name=".activity.login.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.transactions.TransactionActivity" />
+        <activity
+            android:name=".activity.profile.Profile"
+            android:label="@string/title_activity_profile" />
+        <activity android:name=".activity.dashboard.DashBoardActivity">
+
         </activity>
     </application>
 
