Updated adtransaction ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.homepage.HomePageActivity">
+        <activity android:name=".activity.navigationManager.NavigationManagerActivity">
 
         </activity>
+        <activity android:name=".Kotlinactivity"></activity>
+        <activity android:name=".activity.homepage.HomePageActivity" />
         <activity android:name=".activity.login.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +32,13 @@
         <activity
             android:name=".activity.profile.Profile"
             android:label="@string/title_activity_profile" />
-        <activity android:name=".activity.dashboard.DashBoardActivity" />
+        <activity android:name=".activity.dashboard.DashBoardActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
