--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        kotlin_version = '1.3.72'
+        material_version='1.1.0-rc02'
+        glide_version='4.11.0'
+        firestore_version='17.1.2'
+        butterknife='10.2.1'
+        butterknife_compiler='10.2.1'
+        glide_transformation='4.0.0'
+    }
     repositories {
         google()
+        mavenCentral()
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
